Fix poll icon valign

--- a/src/App.scss
+++ b/src/App.scss
@@ -707,10 +707,10 @@ section {
 }
 
 .poll-type-icon {
-  width: 1rem;
-  height: 1rem;
-  stroke: currentColor;
-  fill: none;
+  display: inline-block;
+  font-size: 1rem;
+  line-height: 1;
+  vertical-align: middle;
 }
 
 .poll-end-time,
